--- a/htmlcssproject/da/issue.html
+++ b/htmlcssproject/da/issue.html
@@ -10,31 +10,23 @@
 
 <body>
     <h1> this page will go in depth on the issue</h1>
-    <p>There are two specific ways of committing hate crimes : Person and Property</p>
-    <p>A hate crime against a person would be</p>
-    <p>A hate crime against property would be</p>
-
-    <div class="nextButton">
-        <form>
-            <button formaction="stats.html">Next Page</button>
-        </form>
-    </div>
-    <p></p>
-    <div class="backButton">
-        <form>
-            <button formaction="mainpage.html">Go Back</button>
-        </form>
-    </div>
-
     <div class="generalButton">
         <a href="mainpage.html" target="_parent"><button>1</button></a>
 
-        <a href="issue.html" target="_parent"><button>2</button></a>
-
+        <div id="currentPage"> <a href="issue.html" target="_parent"><button>2</button></a> </div> 
         <a href="stats.html" target="_parent"><button>3</button></a>
 
         <a href="proposition.html" target="_parent"><button>4</button></a>
-</div>
+    </div>
+    <p>There are two specific ways of committing hate crimes : Person and Property</p>
+    <p>A hate crime against a person could be assaulting a black individual because of color.</p>
+    <p>A hate crime against property could be vandalism, damage to religious property(church, synagogue, mosque arson)</p>
+
+ <footer>
+    Roy Wu and Joemond Ma &copy;
+ </footer>
+
+   
 
 </body>
 </html>
