--- a/htmlcssproject/da/mainpage.html
+++ b/htmlcssproject/da/mainpage.html
@@ -10,7 +10,7 @@
 <body>
     <h1>Hate Crime in the US</h1>    
      <div class="generalButton">
-        <a href="mainpage.html" target="_parent"><button>1</button></a>
+       <div id="currentPage"><a href="mainpage.html" target="_parent"><button>1</button></a></div> 
 
         <a href="issue.html" target="_parent"><button>2</button></a>
 
@@ -20,19 +20,16 @@
     </div>
 
     <h2>What is a hate crime?</h2>
-    <p>A hate crime is a criminal offense against a person or property motivated in whole or in part by an offender's bias against a race, religion, disability, sexual orientation, ethnicity, gender or gender identity.</p>
-    <form>
-       <div class="nextButton">
-        <button formaction="issue.html">Next Page</button>
-       </div> 
-    </form>
-
-
-   
+    <p>A hate crime is a criminal offense against a person or property that is motivated based on their race, religion, color, gender, or sexual orientation.</p>
+    
+    <h2>What can happen when caught committing a hate crime?</h2>
+    <p>For the first offense, hate crime is a Class 3 felony and for every subsequent offense, it becomes a Class 2 felony.</p>
 
 
 
-
+    <footer>
+        Roy Wu and Joemond Ma &copy;
+     </footer>
     
     </body>
 
