--- a/htmlcssproject/da/proposition.html
+++ b/htmlcssproject/da/proposition.html
@@ -10,15 +10,6 @@
 
 <body>
     <h1>Propositions to reduce/prevent hate crime</h1>
-    <p>text to be put</p>
-
-
-    <div class="backButton">
-        <form>
-            <button formaction="stats.html">Go Back</button>
-        </form>
-    </div>
-   
     <div class="generalButton">
         <a href="mainpage.html" target="_parent"><button>1</button></a>
 
@@ -26,8 +17,25 @@
 
         <a href="stats.html" target="_parent"><button>3</button></a>
 
-        <a href="proposition.html" target="_parent"><button>4</button></a>
-</div>
+       <div id="currentPage"> <a href="proposition.html" target="_parent"><button>4</button></a></div>
+    </div>
+    <p>Increase the punishment for hate crimes. Right now, hate crimes are only either a Class 3 or 2 felony if committed on multiple occassions.</p>
+    <p>Create a special task force/strengthen officer's ability to prevent hate crime.</p>
+
+  
+    
+    <p></p>
+    <form>
+        <b>Sign up for email updates</b><br>
+        <label for="email">Email:</label><br>
+        <input type="email" id="mail" name="email"><br>
+        <input type="submit" value="Submit">
+    </form>
+
+    <footer>
+        Roy Wu and Joemond Ma &copy;
+     </footer>
+   
 
 </body>
 </html>
