--- a/htmlcssproject/da/stats.html
+++ b/htmlcssproject/da/stats.html
@@ -9,32 +9,22 @@
 <link rel="stylesheet" href="style.css" type="text/css">
 <body>
     <h1>this is the stats page</h1>
-    <h2>Which type of hate crime is most committed?</h2>
-    <p>Reportedly, 54.3% targeted property and 45.7% targeted people</p>
-    <p>However, while hate crimes against property are greater than hate crimes against people, this is only temporary. Recently, hate crimes against individuals increased by 6.2% while hate crimes against property decreased significantly.</p>
-    <h2>Which race is most 
-    <div class="nextButton">
-        <form>
-            <button formaction="proposition.html">Next Page</button>
-        </form>
-    </div>
-    <p></p>
-    <div class="backButton">
-        <form>
-            <button formaction="issue.html">Go Back </button>
-        </form>
-    </div>
-
-
     <div class="generalButton">
         <a href="mainpage.html" target="_parent"><button>1</button></a>
 
         <a href="issue.html" target="_parent"><button>2</button></a>
 
-        <a href="stats.html" target="_parent"><button>3</button></a>
-
+        <div id="currentPage"><a href="stats.html" target="_parent"><button>3</button></a>
+        </div>
         <a href="proposition.html" target="_parent"><button>4</button></a>
-</div>
-
+    </div>
+    <h2>Which type of hate crime is most committed?</h2>
+    <p>Reportedly, 54.3% targeted property and 45.7% targeted people</p>
+    <p>However, while hate crimes against property are greater than hate crimes against people, this is only temporary. Recently, hate crimes against individuals increased by 6.2% while hate crimes against property decreased significantly.</p>
+    <h2>Which race is most </h2>
+ 
+    <footer>
+        Roy Wu and Joemond Ma &copy;
+    </footer>
 </body>
 </html>
