--- a/htmlcssproject/htmlcssproject/da/issue.html
+++ b/htmlcssproject/htmlcssproject/da/issue.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" href="style.css" type="text/css">
 
 <body>
-    <h1> this page will go in depth on the issue</h1>
+    <h1>How Bad is Hate Crime?</h1>
     <div class="generalButton">
         <a href="mainpage.html" target="_parent"><button>1</button></a>
 
@@ -20,8 +20,17 @@
     </div>
     <p>There are two specific ways of committing hate crimes : Person and Property</p>
     <p>A hate crime against a person could be assaulting a black individual because of color.</p>
-    <p>A hate crime against property could be vandalism, damage to religious property(church, synagogue, mosque arson)</p>
+    <p>A hate crime against property could be vandalism, damage to religious property(arson to church, synagogue, mosque)</p>
 
+    <p>Following data is from the<a href="https://www.theiacp.org/resources/responding-to-hate-crimes-a-police-officers-guide-to-investigation-and-prevention">IACP</a></p>
+    <ul>
+        <li>Hate crimes are often especially brutal or injurious.</li>
+        <li>Victim(s) usually feel traumatized and terrified.</li>
+        <li>Families of victims often feel frustrated and powerless.</li>
+        <li>Others in the community who share the victim's characteristics may feel victimized and vulnerable.</li>
+        <li>Hate incidents can escalate and prompt retaliatory action.</li>
+        <li>Hate crimes and hate incidents create communitywide unrest.</li>
+      </ul>
  <footer>
     Roy Wu and Joemond Ma &copy;
  </footer>
