--- a/htmlcssproject/htmlcssproject/da/proposition.html
+++ b/htmlcssproject/htmlcssproject/da/proposition.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" href="style.css" type="text/css">
 
 <body>
-    <h1>Propositions to reduce/prevent hate crime</h1>
+    <h1>Propositions to Reduce/Prevent Hate Crime</h1>
     <div class="generalButton">
         <a href="mainpage.html" target="_parent"><button>1</button></a>
 
@@ -21,6 +21,7 @@
     </div>
     <p>Increase the punishment for hate crimes. Right now, hate crimes are only either a Class 3 or 2 felony if committed on multiple occassions.</p>
     <p>Create a special task force/strengthen officer's ability to prevent hate crime.</p>
+    <p>Raise awareness of how to respond to hate crime</p>
 
   
     
