--- a/htmlcssproject/htmlcssproject/da/stats.html
+++ b/htmlcssproject/htmlcssproject/da/stats.html
@@ -8,7 +8,7 @@
 </head>
 <link rel="stylesheet" href="style.css" type="text/css">
 <body>
-    <h1>this is the stats page</h1>
+    <h1>Hate Crime Statistics</h1>
     <div class="generalButton">
         <a href="mainpage.html" target="_parent"><button>1</button></a>
 
@@ -18,11 +18,67 @@
         </div>
         <a href="proposition.html" target="_parent"><button>4</button></a>
     </div>
-    <h2>Which type of hate crime is most committed?</h2>
+    <h2>What type of hate crime is most committed?</h2>
     <p>Reportedly, 54.3% targeted property and 45.7% targeted people</p>
     <p>However, while hate crimes against property are greater than hate crimes against people, this is only temporary. Recently, hate crimes against individuals increased by 6.2% while hate crimes against property decreased significantly.</p>
-    <h2>Which race is most </h2>
- 
+    <h2>Most affected race for hate crime</h2>
+    <p></p>
+    <h3>Which race commits the most hate crimes?</h3>
+    <p>According to a study of 6780 known offenders, 55.1% were white, 21.2% were Black or African American, and 15.7% other.</p>
+    <h4>How old are hate crime offenders?</h4>
+    <p>Of 6264 hate crime offenders, 89% were 18 years of age or older</p>
+
+    <p>Following FBI hate crime data is from <a href="https://www.justice.gov/hatecrimes/hate-crime-statistics">The United States Department of Justice</a></p>
+    <table>
+        <tr>
+          <th><b>Bias Motivation Category</b></th>
+          <th>2019</th>
+          <th>2020</th>
+          <th>% in 2020</th>
+        </tr>
+        <tr>
+          <td>Race/Ethnicity/Ancestry</td>
+          <td>3963</td>
+          <td>5227</td>
+          <td>61.8%</td>
+        </tr>
+        <tr>
+          <td>Religion</td>
+          <td>1,521</td>
+          <td>1,244</td>
+          <td>13.3%</td>
+        </tr>
+        <tr>
+            <td>Sexual Orientation</td>
+            <td>1,195</td>
+            <td>1,244</td>
+            <td>20%</td>
+          </tr>
+          <tr>
+            <td>Gender Identity</td>
+            <td>198</td>
+            <td>266</td>
+            <td>2.7%</td>
+          </tr>
+          <tr>
+            <td>Disability</td>
+            <td>157</td>
+            <td>130</td>
+            <td>1.4%</td>
+          </tr>
+          <tr>
+            <td>Gender</td>
+            <td>69</td>
+            <td>75</td>
+            <td>0.7%</td>
+          </tr>
+          <tr>
+            <td><b>Total</b></td>
+            <td>7,103</td>
+            <td>8,052</td>
+            <td>100%</td>
+          </tr>
+      </table>
     <footer>
         Roy Wu and Joemond Ma &copy;
     </footer>
