--- a/htmlcssproject/htmlcssproject/da/issue.html
+++ b/htmlcssproject/htmlcssproject/da/issue.html
@@ -22,7 +22,7 @@
     <p>A hate crime against a person could be assaulting a black individual because of color.</p>
     <p>A hate crime against property could be vandalism, damage to religious property(arson to church, synagogue, mosque)</p>
 
-    <p>Following data is from the<a href="https://www.theiacp.org/resources/responding-to-hate-crimes-a-police-officers-guide-to-investigation-and-prevention">IACP</a></p>
+    <p>Following data is from the <a href="https://www.theiacp.org/resources/responding-to-hate-crimes-a-police-officers-guide-to-investigation-and-prevention">IACP</a></p>
     <ul>
         <li>Hate crimes are often especially brutal or injurious.</li>
         <li>Victim(s) usually feel traumatized and terrified.</li>
@@ -31,6 +31,10 @@
         <li>Hate incidents can escalate and prompt retaliatory action.</li>
         <li>Hate crimes and hate incidents create communitywide unrest.</li>
       </ul>
+
+      <video width="320" height="240" controls>
+        <source src="jewhatecrime.mp4" type="video/mp4">
+      </video>
  <footer>
     Roy Wu and Joemond Ma &copy;
  </footer>
