--- a/htmlcssproject/htmlcssproject/da/stats.html
+++ b/htmlcssproject/htmlcssproject/da/stats.html
@@ -79,6 +79,116 @@
             <td>100%</td>
           </tr>
       </table>
+
+      <h2>Hate Crime in New York State 2020</h2>
+      <p>More information can be found in <a href="https://www.criminaljustice.ny.gov/crimnet/ojsa/hate-crime-in-nys-2020-annual-report.pdf">Criminal Justice NY</a></p>
+      <table>
+        <tr>
+          <th><b>Offense Category</b></th>
+          <th>Number</th>
+          <th>Percent</th>
+        </tr>
+        <tr>
+          <td>Total</td>
+          <td>488</td>
+          <td>100%</td>
+        </tr>
+        <tr>
+          <td><b>Crimes against persons</b></td>
+          <td><b>223</b></td>
+          <td><b>45.7%</b></td>
+        </tr>
+        <tr>
+            <td>Murder</td>
+            <td>1</td>
+            <td>0.2%</td>
+          </tr>
+          <tr>
+            <td>Robbery</td>
+            <td>7</td>
+            <td>1.4%</td>
+          </tr>
+          <tr>
+            <td>Aggravated Assasult</td>
+            <td>35</td>
+            <td>7.2%</td>
+          </tr>
+          <tr>
+            <td><b>Property Crime</b></td>
+            <td><b>265</b></td>
+            <td><b>54.3%</b></td>
+          </tr>
+          <tr>
+            <td>Burgarly</td>
+            <td>9</td>
+            <td>1.8%</td>
+          </tr>
+          <tr>
+            <td>Larceny</td>
+            <td>12</td>
+            <td>2.5%</td>
+          </tr>
+          <tr>
+            <td>Criminal Mischief</td>
+            <td>243</td>
+            <td>49.8%</td>
+          </tr>
+          <tr>
+            <td>Other</td>
+            <td>1</td>
+            <td>0.2%</td>
+          </tr>
+      </table>
+      <table>
+        <tr>
+          <th><b>Percentage of Hate Crime Incidents by Major Bias Type 2020</b></th>
+          <th>Percent</th>
+        </tr>
+        <tr>
+          <td>Race/ethnicity/national origin </td>
+          <td>44.3%</td>
+        </tr>
+        <tr>
+          <td>Anti-Relgion</td>
+          <td>42.2%</td>
+        </tr>
+        <tr>
+            <td>Sexual Orientation</td>
+            <td>1,195</td>
+            <td>1,244</td>
+            <td>20%</td>
+          </tr>
+          <tr>
+            <td>Gender Identity</td>
+            <td>198</td>
+            <td>266</td>
+            <td>2.7%</td>
+          </tr>
+          <tr>
+            <td>Disability</td>
+            <td>157</td>
+            <td>130</td>
+            <td>1.4%</td>
+          </tr>
+          <tr>
+            <td>Gender</td>
+            <td>69</td>
+            <td>75</td>
+            <td>0.7%</td>
+          </tr>
+          <tr>
+            <td><b>Total</b></td>
+            <td>7,103</td>
+            <td>8,052</td>
+            <td>100%</td>
+          </tr>
+      </table>
+      <ul>
+        <li>Race/ethnicity/national origin was the most common bias motivation reported: 216 incidents (44.3%).</li>
+        <li>Anti-religious bias was reported in 206 incidents (42.2%).</li>
+        <li>Anti-LGBTQ bias was reported in 56 incidents (11.5%). </li>
+        <li>Anti-Gender, Anti-Age, and Anti-Disability make up 2%</li>
+      </ul>
     <footer>
         Roy Wu and Joemond Ma &copy;
     </footer>
