--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
   
     <h2>These Are Real Instances of Hate Crime in NYC</h2> <!--Video and photo gallery made using relative and absolute links-->
     <video width=100% height="550" controls>
-        <source src="media/jewhatecrime.webm" type="video/mp4">
-      Your browser does not support the video tag.
+        <source src="media/jewhatecrime.webm" type="video/webm">
       </video>
 
     <div class="photoGall"> 
