--- a/issue.html
+++ b/issue.html
@@ -14,7 +14,7 @@
     <h1>What Exactly is Hate Crime?</h1>
    </div> 
     <div class="generalButton">
-        <a href="mainpage.html" target="_parent"><button>1</button></a>
+        <a href="index.html" target="_parent"><button>1</button></a>
 
         <div id="currentPage"> <a href="issue.html" target="_parent"><button>2</button></a> </div> 
         <a href="stats.html" target="_parent"><button>3</button></a>
