--- a/stats.html
+++ b/stats.html
@@ -12,7 +12,7 @@
     <h1>Hate Crime Statistics</h1>
    </div> 
     <div class="generalButton">
-        <a href="mainpage.html" target="_parent"><button>1</button></a>
+        <a href="index.html" target="_parent"><button>1</button></a>
 
         <a href="issue.html" target="_parent"><button>2</button></a>
 
