--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1>Introduction to Hate Crime</h1> <!--This is the heading of the page. We made this through css and the id "outside"-->
     </div> 
      <div class="generalButton"> <!--This is the navBar created using buttons-->
-       <div id="currentPage"><a href="index.html" target="_parent"><button>1</button></a></div> 
+       <div id="currentPage"><a href="mainpage.html" target="_parent"><button>1</button></a></div> 
 
         <a href="issue.html" target="_parent"><button>2</button></a>
 
