--- a/stats.html
+++ b/stats.html
@@ -78,7 +78,7 @@
           <tr>
             <th><b>Offense Category</b></th>
             <th>Number</th>
-            <th>Percent</th>
+            <th>Percentage</th>
           </tr>
           <tr>
             <td>Total</td>
